--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScsxljKP5pcDz7pYSzUj38JQ1P94sRMZ2yPM3BvcHrlsrchXg/viewform?usp=header";
             } else if (isAndroid || isIphone) {
                 // Nếu là Android hoặc iPhone, hiển thị ảnh photo1
-                document.body.innerHTML = `<img src="aa.jpg" style="width: 100%; height: auto; display: block; margin: auto;">`;
+                document.body.innerHTML = `<img src="./aa.jpg" style="width: 100%; height: auto; display: block; margin: auto;">`;
             } else {
                 // Nếu là hệ điều hành khác, hiển thị ảnh photo2
-                document.body.innerHTML = `<img src="bb.jpg" style="width: 100%; height: auto; display: block; margin: auto;">`;
+                document.body.innerHTML = `<img src="./bb.jpg" style="width: 100%; height: auto; display: block; margin: auto;">`;
             }
         });
     </script>
